# continual-learning

./: .gitignore  ER-test.ipynb  LICENSE  NeurIPS_tutorial.md  README.md  _compare.py  _compare_replay.py  _compare_taskID.py  _compare_time.py  all_results.sh  callbacks.py  compare.py  compare_FI.py  compare_FI_KFAC.py  compare_FI_rand.py  compare_MNIST.py  compare_all.py  compare_for_tutorial.py  compare_hyperParams.py  compare_hyperParams_task_free.py  compare_preconditioning.py  compare_replay.py  compare_taskID.py  compare_task_free.py  compare_time.py  continual_learner.py  data.py  dataset info - encoded.ipynb  dataset info.ipynb  dataset-encoded-federated-BACKUP.ipynb  dataset-encoded-federated.ipynb  define_models.py  dgr.py  encoder.py  evaluate.py  example_DGR copy.ipynb  example_DGR.ipynb  example_comparison.ipynb  excitability_modules.py  exemplars.py  (+16 more)
ICLRblogpost/: README.md  compare_FI.py
NeurIPStutorial/: README.md  compare_for_tutorial.py
StabilityGap/: README.md  momentum_comparison.py  optimizer_comparison.py  optimizers_experiments.py  stability_gap_example.py
data/: available.py  datastream.py  labelstream.py  load.py  manipulate.py
eval/: callbacks.py  evaluate.py
federated/: sampling.py  train.py  update.py  utils.py
models/: classifier.py  classifier_stream.py  cond_vae.py  define_models.py  feature_extractor.py  generative_classifier.py  separate_classifiers.py  vae.py
outputs/: contexts2-2000.txt  contexts2-300.txt  contexts8-2000.txt  contexts8-300.txt  contexts8-equally-distributed.txt  contexts8-incrementally-add-class.txt  contexts8-inequally-distributed-classes.txt
params/: options.py  (+2 more)
(+34 files in other folders)
